# kuryr

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  __init__.py  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
contrib/busybox/: build_image.sh  busybox.tar.xz
contrib/docker/libnetwork/: Dockerfile  README.rst  run_kuryr.sh
contrib/vagrant/: README.md  Vagrantfile  devstack.sh  docker.sh  install_kuryr.sh  vagrant.sh
contrib/vagrant/config/: kuryr_rc  localrc
devstack/: local.conf.sample  plugin.sh  settings
doc/: Makefile  requirements.txt
doc/source/: conf.py  design.rst  index.rst  installation.rst  releasenotes.rst  usage.rst
doc/source/cli/: index.rst  kuryr-status.rst
doc/source/devref/: goals_and_use_cases.rst  index.rst  k8s_api_watcher_design.rst  kuryr_mitaka_milestone.rst  libnetwork_remote_driver_design.rst
doc/source/specs/: existing-neutron-network.rst  index.rst  skeleton.rst  template.rst
doc/source/specs/mitaka/: index.rst  kuryr_k8s_integration.rst  nested_containers.rst
doc/source/specs/newton/: kuryr_k8s_integration.rst  nested_containers.rst
etc/: README-config.txt  kuryr-config-generator.conf  kuryr.json  kuryr.spec
init/: kuryr.conf
kuryr/: __init__.py  _i18n.py  binding.py  controllers.py  opts.py  server.py  utils.py
kuryr/cmd/: status.py
kuryr/common/: config.py  constants.py  exceptions.py
kuryr/lib/: _i18n.py  binding.py  config.py  constants.py  exceptions.py  opts.py  utils.py  version.py
kuryr/lib/binding/: __init__.py
kuryr/lib/binding/drivers/: hw_veb.py  ipvlan.py  macvlan.py  nested.py  utils.py  veth.py  vlan.py
kuryr/lib/segmentation_type_drivers/: __init__.py  vlan.py
kuryr/schemata/: __init__.py  commons.py  endpoint_create.py  endpoint_delete.py  join.py  leave.py  network_create.py  network_delete.py  release_address.py  release_pool.py  request_address.py  request_pool.py
kuryr/tests/: base.py  test_config.py  test_join.py  test_kuryr.py  test_kuryr_endpoint.py  test_kuryr_network.py  test_leave.py  test_utils.py
kuryr/tests/contrib/: gate_hook.sh  post_test_hook.sh
kuryr/tests/fullstack/: kuryr_base.py  test_container.py  test_network.py
kuryr/tests/unit/: base.py  test_binding.py  test_config.py  test_ipam_pool.py  test_join.py  test_kuryr.py  test_kuryr_endpoint.py  test_kuryr_existing_network.py  test_kuryr_ipam.py  test_kuryr_network.py  test_leave.py  test_opts.py  test_utils.py
kuryr/tests/unit/binding/: __init__.py  test_package.py
kuryr/tests/unit/binding/drivers/: test_hw_veb.py  test_ipvlan.py  test_macvlan.py  test_nested.py  test_utils.py  test_veth.py  test_vlan.py
kuryr/tests/unit/cmd/: test_status.py
kuryr/tests/unit/segmentation_type_drivers/: test_vlan.py
rally-jobs/: README.rst  kuryr.yaml
rally-jobs/plugins/scenarios/: kuryr.py  utils.py
rally-jobs/tasks/scenarios/: create_and_delete_networks.json  list_networks.json
releasenotes/notes/: bp-sriov-binding-7cebeae1c9f27ea4.yaml  drop-py-2-7-08ca2f91d31c9807.yaml  kuryr-status-upgrade-check-framework-77b478d559020b92.yaml  multiple-binding-driver-512a6a7f620c758e.yaml  started-using-reno-8411d91eb3fe9e6c.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst
scripts/: run_kuryr.sh  run_server.py
tests/: test_kuryr.py
tools/: pretty_tox.sh  subunit-trace.py  tox_install.sh
usr/libexec/kuryr/: bridge  iovisor  midonet  ovs  tap  unbound
