[metadata]
name = kuryr-lib
summary = Kuryr shared config and utilities
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/kuryr/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[bdist_wheel]
universal = 1

[entry_points]
oslo.config.opts =
    kuryr = kuryr.lib.opts:list_kuryr_opts

[files]
packages =
    kuryr
data_files =
    libexec/kuryr = usr/libexec/kuryr/*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kuryr/locale
domain = kuryr

[update_catalog]
domain = kuryr
output_dir = kuryr/locale
input_file = kuryr/locale/kuryr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kuryr/locale/kuryr.pot
