[metadata]
name = kuryr-lib
summary = Kuryr shared config and utilities
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/kuryr/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[entry_points]
oslo.config.opts =
    kuryr = kuryr.lib.opts:list_kuryr_opts

console_scripts =
    kuryr-status = kuryr.cmd.status:main

[files]
packages =
    kuryr
data_files =
    libexec/kuryr = usr/libexec/kuryr/*

[compile_catalog]
directory = kuryr/locale
domain = kuryr

[update_catalog]
domain = kuryr
output_dir = kuryr/locale
input_file = kuryr/locale/kuryr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kuryr/locale/kuryr.pot
